--- a/Aurora/Aurora.vcxproj.filters
+++ b/Aurora/Aurora.vcxproj.filters
@@ -1,36 +1,46 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
-    <Filter Include="Quelldateien">
-      <UniqueIdentifier>{4FC737F1-C7A5-4376-A066-2A32D752A2FF}</UniqueIdentifier>
-      <Extensions>cpp;c;cc;cxx;c++;cppm;ixx;def;odl;idl;hpj;bat;asm;asmx</Extensions>
+    <Filter Include="Aurora">
+      <UniqueIdentifier>{0FF303A8-FB94-2E7E-E44F-42D2D090B5CE}</UniqueIdentifier>
     </Filter>
-    <Filter Include="Headerdateien">
-      <UniqueIdentifier>{93995380-89BD-4b04-88EB-625FBE52EBFB}</UniqueIdentifier>
-      <Extensions>h;hh;hpp;hxx;h++;hm;inl;inc;ipp;xsd</Extensions>
-    </Filter>
-    <Filter Include="Ressourcendateien">
-      <UniqueIdentifier>{67DA6AB6-F800-4c08-8B7A-83BB121AAD01}</UniqueIdentifier>
-      <Extensions>rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx;tiff;tif;png;wav;mfcribbon-ms</Extensions>
+    <Filter Include="Aurora\Events">
+      <UniqueIdentifier>{13B80547-7F78-817D-48B3-CAFAB432C659}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="src\Aurora.h" />
     <ClInclude Include="src\Aurora\Application.h">
-      <Filter>Headerdateien</Filter>
+      <Filter>Aurora</Filter>
     </ClInclude>
     <ClInclude Include="src\Aurora\Core.h">
-      <Filter>Headerdateien</Filter>
-    </ClInclude>
-    <ClInclude Include="src\Aurora.h">
-      <Filter>Headerdateien</Filter>
+      <Filter>Aurora</Filter>
     </ClInclude>
     <ClInclude Include="src\Aurora\EntryPoint.h">
-      <Filter>Headerdateien</Filter>
+      <Filter>Aurora</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Aurora\Events\ApplicationEvent.h">
+      <Filter>Aurora\Events</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Aurora\Events\Event.h">
+      <Filter>Aurora\Events</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Aurora\Events\KeyEvent.h">
+      <Filter>Aurora\Events</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Aurora\Events\MouseEvent.h">
+      <Filter>Aurora\Events</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Aurora\Log.h">
+      <Filter>Aurora</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\Aurora\Application.cpp">
-      <Filter>Quelldateien</Filter>
+      <Filter>Aurora</Filter>
+    </ClCompile>
+    <ClCompile Include="src\Aurora\Log.cpp">
+      <Filter>Aurora</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
